# ha-multiscrape

./: .cookiecutter.json  .devcontainer.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  LICENSE  README.md  hacs.json  info.md  pyproject.toml  renovate.json  requirements.txt  setup.cfg
.devcontainer/: configuration.yaml  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: codeql-analysis.yml  constraints.txt  labeler.yml  lint.yml  release-drafter.yml  tests.yaml  tests.yml  validate.yml
config/: configuration.yaml
custom_components/multiscrape/: ScrapedRestData.py  __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  extractors.py  file.py  form.py  form_auth.py  http.py  http_session.py  icons.json  manifest.json  parsers.py  registry.py  schema.py  scrape_context.py  scraped_rest_data.py  scraper.py  sensor.py  (+6 more)
docs/: ARCHITECTURE_REFACTORING.md
scripts/: setup
tests/: __init__.py  conftest.py  test_auth_failure.py  test_binary_sensor.py  test_button.py  test_cookie_persistence.py  test_coordinator.py  test_entity.py  test_error_handling.py  test_extractors.py  test_file.py  test_form.py  test_http.py  test_http_async.py  test_http_features.py  test_http_session.py  test_init.py  test_integration.py  test_parsers.py  test_registry.py  test_schema.py  test_scrape_context.py  test_scrape_service.py  test_scraper.py  test_scraping_integration.py  test_selector.py  test_sensor.py  test_service.py  test_util.py  test_xml_scraping.py
(+7 files in other folders)
